Revert^2 "Mark FeatureFlags impl member as final"
This reverts commit 8450f57c3eb93500bab7eec83b409aabe3e9ba68.

Reason for revert: Droidmonitor triggered revert due to build breakage in b/351207514. Will be verifying through ABTD before submission.

Change-Id: I4fcfa759eefb0f51fb88b17847d7d9f28c257b0a

--- a/tools/aconfig/aconfig/templates/Flags.java.template
+++ b/tools/aconfig/aconfig/templates/Flags.java.template
@@ -33,8 +33,11 @@ public final class Flags \{
     public static void unsetFeatureFlags() \{
         Flags.FEATURE_FLAGS = null;
     }
-{{ -endif }}
 
-    private static FeatureFlags FEATURE_FLAGS{{ -if not is_test_mode }} = new FeatureFlagsImpl(){{ -endif- }};
+    private static FeatureFlags FEATURE_FLAGS;
+{{ -else }}
+
+    private static final FeatureFlags FEATURE_FLAGS = new FeatureFlagsImpl();
+{{ -endif }}
 
 }
