make/core/Makefile: Add option to skip android desktop images.
Add an option to allow devs to skip building the images when they
don't need them. The gzip calls especially can be slow, so can
affect incremental build times significantly. We'll hopefully be
able to use something faster in the longer term, but for now add
the manual skip.

Bug: None
Test: SKIP_DESKTOP_IMAGES=true m
Change-Id: I2a3f1ebea689c23da88ca6d0757b827b7eb0c936

--- a/core/Makefile
+++ b/core/Makefile
@@ -7873,6 +7873,11 @@ IMAGES := $(INSTALLED_BOOTIMAGE_TARGET) \
 	$(INSTALLED_USERDATAIMAGE_TARGET)
 
 # -----------------------------------------------------------------
+# Desktop images. SKIP_DESKTOP_IMAGES allows devs to skip building
+# images all together for faster local builds when they don't need
+# them, e.g. `SKIP_DESKTOP_IMAGES=true m`.
+ifeq (,$(strip $(SKIP_DESKTOP_IMAGES)))
+# -----------------------------------------------------------------
 # Desktop pack image hook.
 ifneq (,$(strip $(PACK_DESKTOP_FILESYSTEM_IMAGES)))
 PACK_IMAGE_TARGET := $(PRODUCT_OUT)/android-desktop_image.bin
@@ -7909,6 +7914,8 @@ droidcore-unbundled: $(PACKED_RECOVERY_IMAGE_ARCHIVE_TARGET)
 $(call dist-for-goals,dist_files,$(PACKED_RECOVERY_IMAGE_ARCHIVE_TARGET))
 
 endif # PACK_DESKTOP_RECOVERY_IMAGE
+
+endif # SKIP_DESKTOP_IMAGES
 
 # -----------------------------------------------------------------
 # OS Licensing
