--- a/core/Makefile
+++ b/core/Makefile
@@ -7885,9 +7885,12 @@ PACKED_IMAGE_ARCHIVE_TARGET := $(PACK_IMAGE_TARGET).gz
 $(PACKED_IMAGE_ARCHIVE_TARGET): $(PACK_IMAGE_TARGET) | $(GZIP)
 	$(GZIP) -fk $(PACK_IMAGE_TARGET)
 
-droidcore-unbundled: $(PACKED_IMAGE_ARCHIVE_TARGET)
+droidcore-unbundled: $(PACK_IMAGE_TARGET)
 
 $(call dist-for-goals,dist_files,$(PACKED_IMAGE_ARCHIVE_TARGET))
+
+.PHONY: packed-image
+packed-image: $(PACKED_IMAGE_ARCHIVE_TARGET)
 
 endif # PACK_DESKTOP_FILESYSTEM_IMAGES
 
@@ -7904,9 +7907,12 @@ PACKED_RECOVERY_IMAGE_ARCHIVE_TARGET := $(PACK_RECOVERY_IMAGE_TARGET).gz
 $(PACKED_RECOVERY_IMAGE_ARCHIVE_TARGET): $(PACK_RECOVERY_IMAGE_TARGET) | $(GZIP)
 	$(GZIP) -fk $(PACK_RECOVERY_IMAGE_TARGET)
 
-droidcore-unbundled: $(PACKED_RECOVERY_IMAGE_ARCHIVE_TARGET)
+droidcore-unbundled: $(PACK_RECOVERY_IMAGE_TARGET)
 
 $(call dist-for-goals,dist_files,$(PACKED_RECOVERY_IMAGE_ARCHIVE_TARGET))
+
+.PHONY: packed-recovery-image
+packed-recovery-image: $(PACKED_RECOVERY_IMAGE_ARCHIVE_TARGET)
 
 endif # PACK_DESKTOP_RECOVERY_IMAGE
 
