--- a/tools/aconfig/aconfig/templates/FeatureFlagsImpl.java.template
+++ b/tools/aconfig/aconfig/templates/FeatureFlagsImpl.java.template
@@ -35,6 +35,9 @@ public final class FeatureFlagsImpl implements FeatureFlags \{
     StorageInternalReader reader;
     boolean readFromNewStorage;
 
+    boolean useNewStorageValue = false;
+    boolean useNewStorageValueSet = false;
+
     private final static String TAG = "AconfigJavaCodegen";
     private final static String SUCCESS_LOG = "success: %s value matches";
     private final static String MISMATCH_LOG = "error: %s value mismatch, new storage value is %s, old storage value is %s";
@@ -50,6 +53,11 @@ public final class FeatureFlagsImpl implements FeatureFlags \{
                 reader = null;
             }
         }
+
+        if (useNewStorageValueSet) return;
+        useNewStorageValue =
+            DeviceConfig.getBoolean("core_experiments_team_internal", "com.android.providers.settings.use_new_storage_value", false);
+        useNewStorageValueSet = true;
     }
 
 {{ -endif }}
@@ -91,7 +99,7 @@ public final class FeatureFlagsImpl implements FeatureFlags \{
                     Log.i(TAG, String.format(MISMATCH_LOG, "{flag.method_name}", val, {flag.method_name}));
                 }
 
-                if (DeviceConfig.getBoolean("core_experiments_team_internal", "com.android.providers.settings.use_new_storage_value", false)) \{
+                if (useNewStorageValue) \{
                     {flag.method_name} = val;
                 }
 
