Support fastboot update with super.img in package
When "BOARD_SUPER_IMAGE_IN_UPDATE_PACKAGE:=true" be set, the update
archive has no dynamic partition(system, system_ext, vendor, etc.)
But fastboot-info.txt still require those file exist, then result
a update failure.
This patch modify the fastboot-info.txt to adapt the update partition
list.

Change-Id: Ia21f18d1f212dcdbe3f7161acc92a35548e780fe
Signed-off-by: Maximus <maximus.sun@nxp.com>

--- a/core/Makefile
+++ b/core/Makefile
@@ -5842,8 +5842,12 @@ ifneq (,$(strip $(BOARD_CUSTOMIMAGES_PARTITION_LIST)))
 endif
 	$(hide) echo "reboot fastboot" >> $@
 	$(hide) echo "update-super" >> $@
+ifeq ($(BOARD_SUPER_IMAGE_IN_UPDATE_PACKAGE),true)
+	$(hide) echo "flash super" >> $@
+else
 	$(hide) $(foreach partition,$(BOARD_SUPER_PARTITION_PARTITION_LIST), \
 	  echo "flash $(partition)" >> $@;)
+endif
 ifdef BUILDING_SYSTEM_OTHER_IMAGE
 	$(hide) echo "flash --slot-other system system_other.img" >> $@
 endif
