--- a/tools/aconfig/aconfig/templates/cpp_source_file.template
+++ b/tools/aconfig/aconfig/templates/cpp_source_file.template
@@ -18,6 +18,7 @@
 #include <string>
 {{ -else- }}
 {{ if readwrite- }}
+#include <atomic>
 #include <vector>
 {{ -endif }}
 {{ -endif }}
@@ -66,19 +67,18 @@ namespace {cpp_namespace} \{
     class flag_provider : public flag_provider_interface \{
     public:
 
-        {{ if allow_instrumentation- }}
         {{ if readwrite- }}
         flag_provider()
-            {{ if readwrite- }}
-            : cache_({readwrite_count}, -1)
+            : cache_({readwrite_count})
+            {{ -if allow_instrumentation- }}
             , boolean_start_index_()
-            {{ -else- }}
-            : boolean_start_index_()
-            {{ -endif }}
             , flag_value_file_(nullptr)
             , read_from_new_storage_(false)
-            , use_new_storage_value(false) \{
-
+            , use_new_storage_value(false) {{ -endif }} \{
+            for (size_t i = 0 ; i < {readwrite_count}; i++) \{
+                cache_[i] = -1;
+            }
+            {{ if allow_instrumentation- }}
             struct stat buffer;
             if (stat("/metadata/aconfig_test_missions/mission_1", &buffer) == 0) \{
                read_from_new_storage_ = true;
@@ -123,18 +123,20 @@ namespace {cpp_namespace} \{
                 "aconfig_flags.core_experiments_team_internal",
                 "com.android.providers.settings.use_new_storage_value",
                 "false") == "true";
+            {{ endif }}
         }
-        {{ -endif }}
         {{ -endif }}
 
         {{ -for item in class_elements }}
         virtual bool {item.flag_name}() override \{
             {{ -if item.readwrite }}
-            if (cache_[{item.readwrite_idx}] == -1) \{
-                cache_[{item.readwrite_idx}] = server_configurable_flags::GetServerConfigurableFlag(
+            int8_t cached = cache_[{item.readwrite_idx}].load(std::memory_order_relaxed);
+            if (cached == -1) \{
+                cached = server_configurable_flags::GetServerConfigurableFlag(
                     "aconfig_flags.{item.device_config_namespace}",
                     "{item.device_config_flag}",
                     "{item.default_value}") == "true";
+                cache_[{item.readwrite_idx}].store(cached, std::memory_order_relaxed);
             }
 
 
@@ -142,7 +144,7 @@ namespace {cpp_namespace} \{
             if (read_from_new_storage_) \{
                 if (!flag_value_file_) \{
                     ALOGI("error: failed to get flag {item.flag_name}: flag value file is null");
-                    return cache_[{item.readwrite_idx}];
+                    return cached;
                 }
 
                 auto value = aconfig_storage::get_boolean_flag_value(
@@ -151,25 +153,24 @@ namespace {cpp_namespace} \{
 
                 if (!value.ok()) \{
                     ALOGI("error: failed to read flag value: %s", value.error().c_str());
-                    return cache_[{item.readwrite_idx}];
+                    return cached;
                 }
 
-                bool expected_value = cache_[{item.readwrite_idx}];
-                if (*value != expected_value) \{
+                if (*value != cached) \{
                     ALOGI("error: {item.flag_name} value mismatch, new storage value is %s, old storage value is %s",
-                    *value ? "true" : "false", expected_value ? "true" : "false");
+                    *value ? "true" : "false", cached ? "true" : "false");
                 }
 
                 if (use_new_storage_value) \{
                     return *value;
                 } else \{
-                    return expected_value;
+                    return cached;
                 }
             }
             {{ -endif }}
 
 
-            return cache_[{item.readwrite_idx}];
+            return cached;
             {{ -else }}
             {{ -if item.is_fixed_read_only }}
             return {package_macro}_{item.flag_macro};
@@ -182,7 +183,7 @@ namespace {cpp_namespace} \{
 
     {{ if readwrite- }}
     private:
-        std::vector<int8_t> cache_ = std::vector<int8_t>({readwrite_count}, -1);
+        std::vector<std::atomic_int8_t> cache_;
     {{ if allow_instrumentation- }}
         uint32_t boolean_start_index_;
 
@@ -197,8 +198,7 @@ namespace {cpp_namespace} \{
 
 {{ -endif }}
 
-std::unique_ptr<flag_provider_interface> provider_ =
-    std::make_unique<flag_provider>();
+::android::base::NoDestructor<std::unique_ptr<flag_provider_interface>> provider_\{ std::make_unique<flag_provider>() };
 }
 
 {{ for item in class_elements }}
@@ -227,6 +227,6 @@ void set_{header}_{item.flag_name}(bool val) \{
 
 {{ -if is_test_mode }}
 void {header}_reset_flags() \{
-     {cpp_namespace}::reset_flags();
+    {cpp_namespace}::reset_flags();
 }
 {{ -endif }}
