Add boot_16k.img and dtbo_16k.img to target_files
During signing, we need to re-generate dev option OTAs, as the 4K boot
images are getting signed with a different key. To allow generating
incremental OTAs for boot OTAs, include 16K variant of the boot images.

Test: th
Bug: 339658378
Change-Id: I0aafd5f48dbefeb2b86fd8bd93f6ce4d3f28a3cd

--- a/core/Makefile
+++ b/core/Makefile
@@ -6816,6 +6816,14 @@ ifdef BUILT_RAMDISK_16K_TARGET
 	$(hide) mkdir -p $(zip_root)/PREBUILT_IMAGES
 	$(hide) cp $(BUILT_RAMDISK_16K_TARGET) $(zip_root)/PREBUILT_IMAGES/
 endif # BUILT_RAMDISK_16K_TARGET
+ifdef BUILT_BOOTIMAGE_16K_TARGET
+	$(hide) mkdir -p $(zip_root)/IMAGES
+	$(hide) cp $(BUILT_BOOTIMAGE_16K_TARGET) $(zip_root)/IMAGES/
+endif # BUILT_BOOTIMAGE_16K_TARGET
+ifdef INSTALLED_DTBOIMAGE_16KB_TARGET
+	$(hide) mkdir -p $(zip_root)/IMAGES
+	$(hide) cp $(INSTALLED_DTBOIMAGE_16KB_TARGET) $(zip_root)/IMAGES/
+endif # INSTALLED_DTBOIMAGE_16KB_TARGET
 ifeq ($(BOARD_USES_PVMFWIMAGE),true)
 	$(hide) mkdir -p $(zip_root)/PREBUILT_IMAGES
 	$(hide) cp $(INSTALLED_PVMFWIMAGE_TARGET) $(zip_root)/PREBUILT_IMAGES/
